--- a/index.html
+++ b/index.html
@@ -14,8 +14,28 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header-box">
+    <div class="container">
+      <div class="header">
+        
+        <button class="burger">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
 
+        <a href="#top" class="logo logo_header"></a>
+
+        <ul class="header__menu">
+          <li><a href="#">Как работает</a></li>
+          <li><a href="#">Почему мы</a></li>
+          <li><a href="#">Кто мы</a></li>
+        </ul>
+
+        <button class="button button_small">Связаться с нами</button>
+      </div>
+    </div>
   </header>
 
 </body>
