--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <header class="header-box">
     <div class="container">
       <div class="header">
-        
         <button class="burger">
           <span></span>
           <span></span>
@@ -30,7 +29,7 @@
         <ul class="header__menu">
           <li><a href="#">Как работает</a></li>
           <li><a href="#">Почему мы</a></li>
-          <li><a href="#">Кто мы</a></li>
+          <li><a href="#">О нас</a></li>
         </ul>
 
         <button class="button button_small">Связаться с нами</button>
