First screen mobile

--- a/index.html
+++ b/index.html
@@ -37,6 +37,33 @@
     </div>
   </header>
 
+  <div class="first-screen-box">
+    <div class="container">
+      <div class="first-screen">
+
+        <div class="first-screen__floating">
+          <div class="first-screen__doctor"></div>
+          <div class="first-screen__message">
+            <h1 class="title">Комфорт Ваших <br class="d-md-none"> клиентов - наша забота!</h1>
+  
+            <p class="paragraph">Теперь у каждого есть возможность изменить себя в лучшую сторону несмотря на финансовое положение</p>
+            <p class="paragraph paragraph_big">Честная рассрочка от 3-х до 12-и месяцев.</p>
+  
+            <button class="button button_medium button_full-width">Связаться с нами</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
 </body>
 
 </html>
