--- a/index.html
+++ b/index.html
@@ -175,6 +175,41 @@
     </div>
   </div>
 
+  <div class="creators-box">
+    <div class="container">
+      <div class="creators">
+        <img class="creators__logo" src="assets/images/jet-beauty-logo.svg">
+        <h4 class="title title_normal">От создателей:</h4>
+      </div>
+    </div>
+    <div class="container container_xs-disabled">
+      <div class="creators">
+        <div class="products scrollable">
+          <div class="scrollable-item">
+            <div class="product">
+              <img src="assets/images/besmart.png">
+              <p class="paragraph">E-commerce сервис с оборотом 1 000 000$</p>
+            </div>
+          </div>
+
+          <div class="scrollable-item">
+            <div class="product">
+              <img src="assets/images/anderson.png">
+              <p class="paragraph">Сеть семейных кафе</p>
+            </div>
+          </div>
+
+          <div class="scrollable-item">
+            <div class="product">
+              <img src="assets/images/mogo.png">
+              <p class="paragraph">Международная  микрофинансовая организация</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 </body>
 
