--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <div class="offer">
         <div class="centered">
           <h3 class="title title_normal">Хотите с нами? Присоединяйтесь!</h3>
-          <button class="button button_medium">Связаться с нами</button>
+          <button class="button button_medium button_long">Связаться с нами</button>
         </div>
       </div>
     </div>
@@ -202,7 +202,7 @@
           <div class="scrollable-item">
             <div class="product">
               <img src="assets/images/mogo.png">
-              <p class="paragraph">Международная  микрофинансовая организация</p>
+              <p class="paragraph">Международная микрофинансовая организация</p>
             </div>
           </div>
         </div>
@@ -210,6 +210,30 @@
     </div>
   </div>
 
+  <div class="characteristics-box">
+    <div class="container">
+      <h3 class="title title_normal">Наша команда это:</h3>
+    </div>
+
+    <div class="container container_xs-disabled">
+      <div class="characteristics">
+        <div class="characteristic">
+          <img src="assets/images/global.svg">
+          <p class="paragraph paragraph_dark-blue">Опыт ведения международного бизнеса</p>
+        </div>
+
+        <div class="characteristic">
+          <img src="assets/images/awards.svg">
+          <p class="paragraph paragraph_dark-blue">Высокий клиентский сервис!</p>
+        </div>
+
+        <div class="characteristic">
+          <img src="assets/images/marketing.svg">
+          <p class="paragraph paragraph_dark-blue">Развитый контент-маркетинг!</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 
