--- a/index.html
+++ b/index.html
@@ -235,6 +235,44 @@
     </div>
   </div>
 
+  <footer class="footer-box">
+    <div class="container">
+      <div class="footer">
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="footer-logo">
+              <img src="assets/images/jet-beauty-footer-logo.svg">
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="row">
+              <div class="col-12 col-md-6">
+                <p class="paragraph paragraph_opacity">Свяжитесь с нами любым, удобным для Вас способом</p>
+              </div>
+              <div class="col-12 col-md-6">
+                <div class="social-links">
+                  <a href="#" class="social-link social-link_vk"></a>
+                  <a href="#" class="social-link social-link_instagram"></a>
+                  <a href="#" class="social-link social-link_facebook"></a>
+                  <a href="#" class="social-link social-link_telegram"></a>
+                  <a href="#" class="social-link social-link_whatsapp"></a>
+                </div>
+              </div>
+            </div>
+
+            <span class="divider"></span>
+
+            <div class="row">
+              <div class="col-12">
+                <p class="paragraph paragraph_high-opacity">Все права защищены «jet. beauty» Москва. 2021</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
