--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         <div class="first-screen__floating">
           <div class="first-screen__doctor"></div>
           <div class="first-screen__message">
-            <h1 class="title">Комфорт Ваших <br class="d-md-none"> клиентов - наша забота!</h1>
+            <h1 class="title title_normal">Комфорт Ваших <br class="d-md-none"> клиентов - наша забота!</h1>
 
             <div class="first-screen__message-box">
-              <p class="paragraph">Теперь у каждого есть возможность изменить себя в лучшую сторону несмотря на финансовое положение</p>
+              <p class="paragraph paragraph-dark-light">Теперь у каждого есть возможность изменить себя в лучшую сторону несмотря на финансовое положение</p>
 
               <div class="message-box_limited">
-                <p class="paragraph paragraph_big">Честная рассрочка от 3-х до 12-и месяцев.</p>
+                <p class="paragraph paragraph_big">Честная рассрочка от 3-х <br> до 12-и месяцев.</p>
 
                 <button class="button button_medium button_full-width">Связаться с нами</button>
               </div>
