--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <a href="#top" class="logo logo_header"></a>
 
         <ul class="header__menu">
-          <li><a href="#">Как работает</a></li>
-          <li><a href="#">Почему мы</a></li>
-          <li><a href="#">О нас</a></li>
+          <li><a href="#how-it-works">Как работает</a></li>
+          <li><a href="#why-us">Почему мы</a></li>
+          <li><a href="#creators">О нас</a></li>
         </ul>
 
         <button class="button button_small">Связаться с нами</button>
@@ -37,7 +37,7 @@
     </div>
   </header>
 
-  <div class="first-screen-box">
+  <div class="first-screen-box" id="top">
     <div class="container">
       <div class="first-screen">
 
@@ -61,7 +61,7 @@
     </div>
   </div>
 
-  <div class="how-it-works-box">
+  <div class="how-it-works-box" id="how-it-works">
     <div class="container">
       <div class="how-it-works">
         <h2 class="title title_normal">Как это работает?</h2>
@@ -129,7 +129,7 @@
 
   <img class="jet-beauty-divider">
 
-  <div class="why-choose-us-box">
+  <div class="why-choose-us-box" id="why-us">
     <div class="container">
       <div class="why-choose-us-text">
         <h3 class="title">Почему с нами стоит работать?</h3>
@@ -175,7 +175,7 @@
     </div>
   </div>
 
-  <div class="creators-box">
+  <div class="creators-box" id="creators">
     <div class="container">
       <div class="creators">
         <img class="creators__logo" src="assets/images/jet-beauty-logo.svg">
@@ -202,7 +202,7 @@
           <div class="scrollable-item">
             <div class="product">
               <img src="assets/images/mogo.png">
-              <p class="paragraph">Международная микрофинансовая организация</p>
+              <p class="paragraph">Международная финансовая организация</p>
             </div>
           </div>
         </div>
