--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li><a href="#creators">О нас</a></li>
         </ul>
 
-        <button class="button button_small">Связаться с нами</button>
+        <button class="button button_small open-modal" data-id="application">Связаться с нами</button>
       </div>
     </div>
   </header>
@@ -52,7 +52,7 @@
               <div class="message-box_limited">
                 <p class="paragraph paragraph_big">Честная рассрочка от 3-х <br> до 12-и месяцев.</p>
 
-                <button class="button button_medium button_full-width">Связаться с нами</button>
+                <button class="button button_medium button_full-width open-modal" data-id="application">Связаться с нами</button>
               </div>
             </div>
           </div>
@@ -169,7 +169,7 @@
       <div class="offer">
         <div class="centered">
           <h3 class="title title_normal">Хотите с нами? Присоединяйтесь!</h3>
-          <button class="button button_medium button_long">Связаться с нами</button>
+          <button class="button button_medium button_long open-modal" data-id="application">Связаться с нами</button>
         </div>
       </div>
     </div>
@@ -272,6 +272,37 @@
       </div>
     </div>
   </footer>
+
+  <div class="modal-box" id="application">
+    <div class="modal">
+      <button class="button-close close-modal"></button>
+      <h4 class="title title_normal title_modal">Свяжитесь с нами</h4>
+
+      <form action="" class="form">
+        <div class="input-box">
+          <label for="">Название клиники:</label>
+          <input type="text" placeholder="Пластилин">
+        </div>
+
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="input-box">
+              <label for="">Имя:</label>
+              <input type="text" placeholder="Константин">
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="input-box">
+              <label for="">Телефон:</label>
+              <input type="text" placeholder="+7 (777) 777 77 77">
+            </div>
+          </div>
+        </div>
+        
+        <button class="button button_medium button_full-width">Отправить заявку</button>
+      </form>
+    </div>
+  </div>
 
 </body>
 
